fixed slideshow horizontal scroll bug

--- a/sass/sections/_create.sass
+++ b/sass/sections/_create.sass
@@ -355,10 +355,11 @@
     +columns(11,24)
     +omega(24)
     +leader(.25)
-    +clearfix
     color: rgba($base,$small)
     h3
-      +gone
+      height: 0
+      width: 0
+      text-indent: -9999px
     li
       list-style: decimal
       &::before
